--- a/HW1/config.ini
+++ b/HW1/config.ini
@@ -1,3 +1,3 @@
 [TELEGRAM]
 ACCESS_TOKEN = 1135906220:AAFWZX5-vxsiVuBtFHosSvlf4SlDXyMZxz0
-WEBHOOK_URL = https://22b75801.ngrok.io
+WEBHOOK_URL = 34.227.112.61:5000
